Fixed CSS bug causing non-wrapping of buttons on mobile

--- a/assets/_scss/_homepage.scss
+++ b/assets/_scss/_homepage.scss
@@ -118,6 +118,7 @@ html {
     font-size: 20px;
     color: #fff;
     border: none;
+    margin-top: 5px;
     margin-right: 5px;
     text-decoration: none;
 
@@ -138,6 +139,7 @@ html {
     font-weight: 500;
     font-size: 20px;
     text-decoration: none;
+    margin-top: 5px; 
 
     &--mocklab {
         color: $mocklab-dark-green;
